--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "target": "es5",
         "lib": ["dom", "dom.iterable", "esnext"],
-        "types": ["cypress"],
+        "types": ["cypress", "node"],
         "allowJs": false,
         "skipLibCheck": true,
         "esModuleInterop": true,
