--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-scripts": "5.0.0",
-        "typescript": "^4.6.2",
-        "web-vitals": "^2.1.4"
+        "typescript": "^4.6.2"
     },
     "devDependencies": {
         "@types/node": "^16.11.26",
@@ -23,7 +22,6 @@
         "concurrently": "^7.0.0",
         "cypress": "^9.5.1",
         "eslint": "^8.10.0",
-        "eslint-config-airbnb": "^19.0.4",
         "eslint-config-prettier": "^8.4.0",
         "eslint-plugin-cypress": "^2.12.1",
         "eslint-plugin-import": "^2.25.4",
