--- a/.travis.yml
+++ b/.travis.yml
@@ -40,11 +40,17 @@ jobs:
         language: java
         jdk:
           - openjdk11
+        services:
+          - docker
         install:
           - git clone https://github.com/Opetushallitus/ci-tools.git
           - export BASE_IMAGE="baseimage-fatjar-openjdk11:master"
           - cp ~/$TRAVIS_BUILD_NUMBER/build $TRAVIS_BUILD_DIR/
           - cd server && mvn clean install && cd -
+        script:
+          - ./ci-tools/common/pull-image.sh
+          - ./ci-tools/build/build-fatjar.sh $ARTIFACT_NAME
+          - ./ci-tools/build/upload-image.sh $ARTIFACT_NAME
 
 
 
