--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,11 @@ git:
 branches:
   only:
     - master
+cache:
+  directories:
+    - $HOME/.m2
+    - $HOME/.npm
+    - node_modules
 env:
   global:
     # AWS_ACCESS_KEY_ID
@@ -45,6 +50,7 @@ jobs:
       install:
         - git clone https://github.com/Opetushallitus/ci-tools.git
         - export BASE_IMAGE="baseimage-fatjar-openjdk11:master"
+        - export ARTIFACT_NAME="koodisto-ui"
         - cp -R ~/$TRAVIS_BUILD_NUMBER/build $TRAVIS_BUILD_DIR/
         - cd server && mvn clean install && cd -
       script:
