--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
         "@types/jest": "^27.4.1",
         "@types/react": "^17.0.39",
         "@types/react-dom": "^17.0.11",
+        "axios": "^0.26.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-scripts": "5.0.0",
-        "typescript": "^4.6.2"
+        "typescript": "^4.6.2",
+        "universal-cookie": "^4.0.4"
     },
     "devDependencies": {
         "@types/node": "^16.11.26",
