--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-scripts": "5.0.0",
+        "styled-components": "^5.3.3",
         "typescript": "^4.6.2",
         "universal-cookie": "^4.0.4"
     },
     "devDependencies": {
         "@types/node": "^16.11.26",
+        "@types/styled-components": "^5.1.24",
         "@typescript-eslint/eslint-plugin": "^5.13.0",
         "@typescript-eslint/parser": "^5.13.0",
         "concurrently": "^7.0.0",
@@ -31,9 +33,9 @@
         "eslint-plugin-prettier": "^4.0.0",
         "eslint-plugin-react": "^7.29.2",
         "eslint-plugin-react-hooks": "^4.3.0",
+        "husky": "^7.0.0",
         "prettier": "^2.5.1",
-        "wait-on": "^6.0.1",
-        "husky": "^7.0.0"
+        "wait-on": "^6.0.1"
     },
     "scripts": {
         "start": "BROWSER=none react-scripts start",
