--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,5 +17,6 @@
         "noEmit": true,
         "jsx": "react-jsx"
     },
-    "include": ["**/*.ts", "**/*.tsx"]
+    "include": ["**/*.ts", "**/*.tsx"],
+    "files": ["./node_modules/react-scripts/lib/react-app.d.ts"]
 }
