--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@types/react": "^17.0.39",
         "@types/react-dom": "^17.0.11",
         "axios": "^0.26.0",
+        "jotai": "^1.6.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-scripts": "5.0.0",
@@ -60,5 +61,6 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
-    }
+    },
+    "proxy": "http://localhost:8080"
 }
