--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
         "wait-on": "^6.0.1"
     },
     "scripts": {
-        "start": "BROWSER=none react-scripts start",
+        "start": "concurrently  --success first --kill-others 'npm run mock-api' 'npm run server' 'BROWSER=none react-scripts start'",
+        "mock-api": "cd mock-api && npm run mock-api",
+        "server": "cd server && mvn spring-boot:run",
         "build": "npm run lint && react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
@@ -61,5 +63,5 @@
             "last 1 safari version"
         ]
     },
-    "proxy": "http://localhost:8080"
+    "proxy": "http://localhost:9000"
 }
