--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ jobs:
         - 14.17.5
       install:
         - npm install
-        - cd kayttooikeus-service-api && npm install && cd -
+        - cd mock-api && npm install && cd -
       script:
         - npm run build
         - npm run cypress:ci
