--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,11 +2,28 @@ name: koodisto-ui
 on:
   workflow_dispatch:
   push:
+    branches: [ main ]
+    paths-ignore:
+      - '**.md'
+  pull_request:
+    branches: [ main ]
     paths-ignore:
       - '**.md'
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      - name: Build react app
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+          cache: 'npm'
       - run: |
           echo "build koodisto-ui"
+      - run: npm install
+      - run: cd mock-api && npm install && cd -
+      - run: npm run build
+      - run: npm run cypress:ci
