--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,14 +16,13 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      - uses: actions/setup-node@v2
+      - name: Use node
+        uses: actions/setup-node@v2
         with:
           node-version: '14'
           cache: 'npm'
-      - name: Build react app
-      - run: |
-          echo "build koodisto-ui"
-      - run: npm install
+      - name: Install dependencies
+        run: npm install
       - run: cd mock-api && npm install && cd -
       - run: npm run build
       - run: npm run cypress:ci
