--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,18 +8,27 @@ on:
     paths-ignore:
       - '**.md'
 jobs:
-  build:
-
+  react-build:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v3
-      - name: Use node
+        with:
+          fetch-depth: 0
+      - name: Use node 14
         uses: actions/setup-node@v2
         with:
           node-version: '14'
+          cache: 'npm'
       - name: Install dependencies
         run: npm install
       - run: cd mock-api && npm install && cd -
       - run: npm run build
       - run: npm run cypress:ci
+      - name: Set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          java-version: '11'
+          distribution: 'adopt'
+          cache: maven
+      - name: Build with Maven
+        run: mvn --version
