--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,7 +11,8 @@ jobs:
   react-build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout source
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
       - name: Use node 14
@@ -21,14 +22,19 @@ jobs:
           cache: 'npm'
       - name: Install dependencies
         run: npm install
-      - run: cd mock-api && npm install && cd -
-      - run: npm run build
-      - run: npm run cypress:ci
+      - name: Install mock dependencies
+        run: cd mock-api && npm install && cd -
+      - name: Run react Build
+        run: npm run build
+      - name: Run Cypress tests
+        run: npm run cypress:ci
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
           java-version: '11'
           distribution: 'adopt'
           cache: maven
-      - name: Build with Maven
+      - name: Maven version
         run: mvn --version
+      - name: Build Spring-Boot
+        run: cd server && mvn clean install && cd -
