--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,6 +8,23 @@ on:
     paths-ignore:
       - '**.md'
 jobs:
+  cypress:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout source
+        uses: actions/checkout@v3
+      - name: Use node 14
+        uses: actions/setup-node@v2
+        with:
+          node-version: '14'
+          cache: 'npm'
+      - name: Install dependencies
+        run: npm install
+      - name: Install mock dependencies
+        run: cd mock-api && npm install && cd -
+      - name: Run Cypress tests
+        run: npm run cypress:ci
+
   react-build:
     runs-on: ubuntu-latest
     steps:
@@ -26,8 +43,6 @@ jobs:
         run: cd mock-api && npm install && cd -
       - name: Run react Build
         run: npm run build
-      - name: Run Cypress tests
-        run: npm run cypress:ci
       - name: Set up JDK 11
         uses: actions/setup-java@v2
         with:
