--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -77,7 +77,8 @@ jobs:
           source ci-tools/common/setup-tools.sh
           export BASE_IMAGE="baseimage-fatjar-openjdk11:master"
           export ARTIFACT_NAME="koodisto-ui"
-          mv koodisto-ui.jar $DOCKER_BUILD_DIR/artifact/koodisto-ui.jar
+          mv koodisto-ui.jar $DOCKER_BUILD_DIR/artifact/$ARTIFACT_NAME.jar
+          ls -l $DOCKER_BUILD_DIR/artifact/
           ./ci-tools/common/pull-image.sh
           ./ci-tools/build/build-fatjar.sh $ARTIFACT_NAME
           ./ci-tools/build/upload-image.sh $ARTIFACT_NAME
