--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.servlet.context-path=/koodisto-app
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 
-host.virkailija=localhost:9000
+host.virkailija=virkailija.hahtuvaopintopolku.fi
 url-virkailija=https://${host.virkailija}
 cas.service=${url-virkailija}/koodisto-app
 cas.send-renew=false
