--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "axios": "^0.26.0",
         "jotai": "^1.6.0",
         "moment": "^2.29.1",
+        "papaparse": "^5.3.2",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-intl": "^5.24.6",
@@ -28,6 +29,7 @@
         "@iconify/icons-fa-solid": "^1.2.2",
         "@iconify/react": "^3.1.4",
         "@types/node": "^16.11.26",
+        "@types/papaparse": "^5.3.2",
         "@types/react-table": "^7.7.9",
         "@types/styled-components": "^5.1.24",
         "@typescript-eslint/eslint-plugin": "^5.14.0",
