--- a/package.json
+++ b/package.json
@@ -1,80 +1,93 @@
 {
-    "homepage": "/koodisto-app",
-    "name": "koodisto-app",
-    "version": "0.1.0",
-    "private": true,
-    "dependencies": {
-        "@opetushallitus/virkailija-ui-components": "^0.4.6",
-        "@testing-library/react": "^12.1.3",
-        "@testing-library/user-event": "^13.5.0",
-        "@types/jest": "^27.4.1",
-        "@types/react": "^17.0.39",
-        "@types/react-dom": "^17.0.11",
-        "axios": "^0.26.0",
-        "jotai": "^1.6.0",
-        "moment": "^2.29.1",
-        "papaparse": "^5.3.2",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2",
-        "react-intl": "^5.24.6",
-        "react-scripts": "5.0.0",
-        "react-table": "^7.7.0",
-        "styled-components": "^5.3.3",
-        "typescript": "^4.6.2",
-        "universal-cookie": "^4.0.4",
-        "url": "^0.11.0"
-    },
-    "devDependencies": {
-        "@formatjs/cli": "^4.8.2",
-        "@iconify/icons-fa-solid": "^1.2.2",
-        "@iconify/react": "^3.1.4",
-        "@types/node": "^16.11.26",
-        "@types/papaparse": "^5.3.2",
-        "@types/react-table": "^7.7.9",
-        "@types/styled-components": "^5.1.24",
-        "@typescript-eslint/eslint-plugin": "^5.14.0",
-        "@typescript-eslint/parser": "^5.14.0",
-        "concurrently": "^7.0.0",
-        "cypress": "^9.5.1",
-        "eslint": "^8.10.0",
-        "eslint-config-prettier": "^8.4.0",
-        "eslint-plugin-cypress": "^2.12.1",
-        "eslint-plugin-import": "^2.25.4",
-        "eslint-plugin-jsx-a11y": "^6.5.1",
-        "eslint-plugin-prettier": "^4.0.0",
-        "eslint-plugin-react": "^7.29.2",
-        "eslint-plugin-react-hooks": "^4.3.0",
-        "husky": "^7.0.0",
-        "prettier": "^2.5.1",
-        "wait-on": "^6.0.1"
-    },
-    "scripts": {
-        "start": "concurrently  --success first --kill-others 'npm run mock-api' 'BROWSER=none react-scripts start'",
-        "mock-api": "cd mock-api && npm run mock-api",
-        "server": "cd server && mvn spring-boot:run",
-        "build": "npm run lint && react-scripts build",
-        "test": "react-scripts test",
-        "eject": "react-scripts eject",
-        "lint": "eslint --ext .ts,.tsx .",
-        "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
-        "cypress:open": "cypress open",
-        "cypress:run": "cypress run",
-        "cypress:ci": "START_SERVER_AND_TEST_INSECURE=1 concurrently  --success first --kill-others 'wait-on http://localhost:3000/koodisto-app && npm run cypress:run' 'npm run mock-api' 'BROWSER=none react-scripts start'",
-        "prepare": "husky install",
-        "extract": "formatjs extract",
-        "generate:translations": "npm run extract -- 'src/**/*.ts*' --ignore='**/*.d.ts' --out-file lang/default-translations.json --id-interpolation-pattern '[sha512:contenthash:base64:6]'"
-    },
-    "browserslist": {
-        "production": [
-            ">0.2%",
-            "not dead",
-            "not op_mini all"
-        ],
-        "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
-        ]
-    },
-    "proxy": "http://localhost:9000"
+  "homepage": "/koodisto-app",
+  "name": "koodisto-app",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@opetushallitus/virkailija-ui-components": "^0.4.6",
+    "axios": "^0.26.0",
+    "jotai": "^1.6.0",
+    "moment": "^2.29.1",
+    "papaparse": "^5.3.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-intl": "^5.24.6",
+    "react-scripts": "5.0.0",
+    "react-table": "^7.7.0",
+    "styled-components": "^5.3.3",
+    "typescript": "^4.6.2",
+    "universal-cookie": "^4.0.4",
+    "url": "^0.11.0"
+  },
+  "devDependencies": {
+    "@cypress/code-coverage": "^3.9.12",
+    "@cypress/instrument-cra": "^1.4.0",
+    "@formatjs/cli": "^4.8.2",
+    "@iconify/icons-fa-solid": "^1.2.2",
+    "@iconify/react": "^3.1.4",
+    "@testing-library/react": "^12.1.3",
+    "@testing-library/jest-dom": "^5.14.1",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.4.1",
+    "@types/node": "^16.11.26",
+    "@types/papaparse": "^5.3.2",
+    "@types/react": "^17.0.39",
+    "@types/react-dom": "^17.0.11",
+    "@types/react-table": "^7.7.9",
+    "@types/styled-components": "^5.1.24",
+    "@typescript-eslint/eslint-plugin": "^5.14.0",
+    "@typescript-eslint/parser": "^5.14.0",
+    "concurrently": "^7.0.0",
+    "cypress": "^9.5.1",
+    "eslint": "^8.10.0",
+    "eslint-config-prettier": "^8.4.0",
+    "eslint-plugin-cypress": "^2.12.1",
+    "eslint-plugin-import": "^2.25.4",
+    "eslint-plugin-jsx-a11y": "^6.5.1",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.29.2",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "husky": "^7.0.0",
+    "jest": "^27.5.1",
+    "prettier": "^2.5.1",
+    "wait-on": "^6.0.1"
+  },
+  "scripts": {
+    "dev": "concurrently  --success first --kill-others 'npm run mock-api' 'npm run start'",
+    "start": "BROWSER=none react-scripts -r @cypress/instrument-cra start",
+    "mock-api": "cd mock-api && npm run mock-api",
+    "server": "cd server && mvn spring-boot:run",
+    "build": "npm run lint && react-scripts build",
+    "test": "react-scripts test --coverage --watchAll=false",
+    "eject": "react-scripts eject",
+    "lint": "eslint --ext .ts,.tsx .",
+    "format": "prettier --write './**/*.{js,jsx,ts,tsx,css,md,json}' --config ./.prettierrc",
+    "cypress:open": "cypress open",
+    "cypress:run": "cypress run",
+    "cypress:ci": "START_SERVER_AND_TEST_INSECURE=1 concurrently  --success first --kill-others 'wait-on http://localhost:3000/koodisto-app && npm run cypress:run' 'npm run mock-api' 'npm run start'",
+    "prepare": "husky install",
+    "extract": "formatjs extract",
+    "generate:translations": "npm run extract -- 'src/**/*.ts*' --ignore='**/*.d.ts' --out-file lang/default-translations.json --id-interpolation-pattern '[sha512:contenthash:base64:6]'"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "proxy": "http://localhost:9000",
+  "jest": {
+    "coverageReporters": [
+      "lcov"
+    ]
+  },
+  "nyc": {
+    "report-dir": "cypress-coverage"
+  }
 }
