--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "target": "es5",
         "lib": ["dom", "dom.iterable", "esnext"],
-        "types": ["cypress", "node"],
+        "types": ["jest","node"],
         "allowJs": false,
         "skipLibCheck": true,
         "esModuleInterop": true,
@@ -17,6 +17,6 @@
         "noEmit": true,
         "jsx": "react-jsx"
     },
-    "include": ["**/*.ts", "**/*.tsx"],
+    "include": ["src/**/*.ts", "src/**/*.tsx"],
     "files": ["./node_modules/react-scripts/lib/react-app.d.ts"]
 }
