--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,6 +33,13 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      - name: Code coverrage cache
+        uses: actions/cache@v2
+        env:
+          cache-name: cache-code-coverage
+        with:
+          path: coverage
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ github.sha }}
       - name: Use node 14
         uses: actions/setup-node@v2
         with:
@@ -86,12 +93,20 @@ jobs:
           ./ci-tools/github-build/build-fatjar.sh $ARTIFACT_NAME
           ./ci-tools/github-build/upload-image.sh $ARTIFACT_NAME
   sonarcloud:
+    needs: [react-build]
     name: SonarCloud
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+      - name: Code coverrage cache
+        uses: actions/cache@v2
+        env:
+          cache-name: cache-code-coverage
+        with:
+          path: coverage
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ github.sha }}
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
         env:
