add coverage for cypress

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,13 @@ jobs:
     steps:
       - name: Checkout source
         uses: actions/checkout@v3
+      - name: Code coverrage cache
+        uses: actions/cache@v2
+        env:
+          cache-name: cache-cypress-coverage
+        with:
+          path: cypress-coverage
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ github.sha }}
       - name: Use node 14
         uses: actions/setup-node@v2
         with:
@@ -95,7 +102,7 @@ jobs:
           ./ci-tools/github-build/build-fatjar.sh $ARTIFACT_NAME
           ./ci-tools/github-build/upload-image.sh $ARTIFACT_NAME
   sonarcloud:
-    needs: [react-build]
+    needs: [react-build, cypress]
     name: SonarCloud
     runs-on: ubuntu-latest
     steps:
@@ -108,6 +115,13 @@ jobs:
           cache-name: cache-code-coverage
         with:
           path: coverage
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ github.sha }}
+      - name: Cypress coverrage cache
+        uses: actions/cache@v2
+        env:
+          cache-name: cache-cypress-coverage
+        with:
+          path: cypress-coverage
           key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ github.sha }}
       - name: SonarCloud Scan
         uses: SonarSource/sonarcloud-github-action@master
