--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,10 +5,9 @@ sonar.organization=opetushallitus
 #sonar.projectName=koodisto-app
 #sonar.projectVersion=1.0
 
-# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-sonar.sources=./src
-
-# Encoding of the source code. Default is default system encoding
 sonar.sourceEncoding=UTF-8
+
+sonar.sources=./src
+sonar.exclusions="**/*.test.ts, **/*.test.tsx
 
 sonar.javascript.lcov.reportPaths=coverage/lcov.info,cypress-coverage/lcov.info
