--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -8,6 +8,6 @@ sonar.organization=opetushallitus
 sonar.sourceEncoding=UTF-8
 
 sonar.sources=./src
-sonar.exclusions="**/*.test.ts, **/*.test.tsx
+sonar.exclusions=**/*.test.ts, **/*.test.tsx
 
 sonar.javascript.lcov.reportPaths=coverage/lcov.info,cypress-coverage/lcov.info
