--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ src/react-app-env.d.ts
 coverage/
 cypress/videos
 cypress/screenshots
+cypress/downloads
 cypress-coverage
 node_modules/
 .DS_Store
