--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,9 +27,7 @@ jobs:
           node-version: '14'
           cache: 'npm'
       - name: Install dependencies
-        run: npm install
-      - name: Install mock dependencies
-        run: cd mock-api && npm install && cd -
+        run: npm run install:all
       - name: Run Cypress tests
         run: npm run cypress:ci
 
