--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dependencies": {
         "@opetushallitus/virkailija-ui-components": "^0.4.6",
         "axios": "^0.26.0",
+        "axios-hooks": "^3.0.1",
         "jotai": "^1.6.0",
         "moment": "^2.29.1",
         "papaparse": "^5.3.2",
@@ -15,6 +16,7 @@
         "react-intl": "^5.24.6",
         "react-notifications-component": "^3.4.1",
         "react-router-dom": "^6.3.0",
+        "react-papaparse": "^4.0.2",
         "react-scripts": "5.0.0",
         "react-table": "^7.7.0",
         "styled-components": "^5.3.3",
