--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
         "react-dom": "^17.0.2",
         "react-intl": "^5.24.6",
         "react-notifications-component": "^3.4.1",
-        "react-router-dom": "^6.3.0",
         "react-papaparse": "^4.0.2",
+        "react-router-dom": "^6.3.0",
         "react-scripts": "5.0.0",
         "react-table": "^7.7.0",
         "styled-components": "^5.3.3",
@@ -45,6 +45,7 @@
         "@typescript-eslint/parser": "^5.14.0",
         "concurrently": "^7.0.0",
         "cypress": "^9.5.1",
+        "cypress-file-upload": "^5.0.8",
         "eslint": "^8.10.0",
         "eslint-config-prettier": "^8.4.0",
         "eslint-plugin-cypress": "^2.12.1",
