--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "private": true,
     "dependencies": {
         "@opetushallitus/virkailija-ui-components": "^0.4.6",
-        "axios": "^0.26.0",
+        "gaxios": "^5.0.0",
         "jotai": "^1.6.0",
         "moment": "^2.29.1",
         "papaparse": "^5.3.2",
