--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,3 @@
+registry=https://registry.npmjs.org/
 @opetushallitus:registry=https://artifactory.opintopolku.fi/artifactory/repository/oph-opintopolku-npm/
 engine-strict=true
