KH-431 Use github packages instead of artifactory for dependency lookup

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -114,18 +114,11 @@
     </build>
     <repositories>
         <repository>
-            <id>oph-sade-artifactory-snapshots</id>
-            <url>https://artifactory.opintopolku.fi/artifactory/oph-sade-snapshot-local</url>
+            <id>github</id>
+            <url>https://maven.pkg.github.com/Opetushallitus/*</url>
             <snapshots>
                 <enabled>true</enabled>
             </snapshots>
-            <releases>
-                <enabled>false</enabled>
-            </releases>
-        </repository>
-        <repository>
-            <id>oph-sade-artifactory-releases</id>
-            <url>https://artifactory.opintopolku.fi/artifactory/oph-sade-release-local</url>
         </repository>
     </repositories>
 </project>
